--- a/gnucash.cabal
+++ b/gnucash.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 17bfc704802022b7fdb1eb45d4b195686c6c5c986c36a0966305de234863a4ed
+-- hash: db5778cb3051a4fab87a764f2d4c0af78ee76e93f3822f4496d2bbbe102d50eb
 
 name:           gnucash
 version:        0.1.0.0
@@ -36,18 +36,19 @@ library
       Paths_gnucash
   hs-source-dirs:
       src
+  default-extensions: OverloadedStrings RecordWildCards Arrows LambdaCase
   ghc-options: -Wall -Wcompat
   build-depends:
       Decimal >=0.5.1 && <0.6
-    , base >=4.7 && <5
-    , bytestring >=0.10.12 && <0.11
+    , base >=4.6 && <5
+    , bytestring >=0.10.10 && <0.11
     , exceptions >=0.10.4 && <0.11
     , hxt >=9.3.1 && <9.4
     , magic >=1.1 && <1.2
     , temporary >=1.3 && <1.4
     , text >=1.2.4 && <1.3
     , time >=1.9.3 && <1.10
-    , unordered-containers >=0.2.13 && <0.3
+    , unordered-containers >=0.2.10 && <0.3
     , zlib >=0.6.2 && <0.7
   default-language: Haskell2010
 
@@ -55,22 +56,31 @@ test-suite gnucash-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Generators
       Paths_gnucash
   hs-source-dirs:
       test
+  default-extensions: OverloadedStrings RecordWildCards Arrows LambdaCase
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Decimal >=0.5.1 && <0.6
+    , QuickCheck
     , base
-    , bytestring >=0.10.12 && <0.11
+    , bytestring >=0.10.10 && <0.11
     , doctest
     , exceptions >=0.10.4 && <0.11
+    , generic-random
     , gnucash
+    , hspec
     , hxt >=9.3.1 && <9.4
     , magic >=1.1 && <1.2
+    , quickcheck-instances
+    , tasty
+    , tasty-hspec
+    , tasty-quickcheck
     , temporary >=1.3 && <1.4
     , text >=1.2.4 && <1.3
     , time >=1.9.3 && <1.10
-    , unordered-containers >=0.2.13 && <0.3
+    , unordered-containers >=0.2.10 && <0.3
     , zlib >=0.6.2 && <0.7
   default-language: Haskell2010
